--- a/tasks/setup-redhat.yml
+++ b/tasks/setup-redhat.yml
@@ -1,6 +1,6 @@
 ---
 - name: setup nodejs sources
-  shell: bash -lc "curl --silent --location https://rpm.nodesource.com/setup_4.x | bash -"
+  shell: bash -lc "curl -sL https://rpm.nodesource.com/setup_6.x | bash -"
 
 - name: install nodejs
   yum: name={{ item }} state=installed
